--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,6 +7,7 @@
       <th>Name</th>
       <th>Price</th>
       <th>Cateogory</th>
+      <th>Inventory</th>
       <th>Actions</th>
     </tr>
   </thead>
@@ -16,9 +17,14 @@
         <td><%= product.name %></td>
         <td><%= product.price %></td>
         <td><%= product.cateogory.name %></td>
+        <td><%= product.inventory %></td>
         <td>
-          <%= link_to 'Edit', edit_product_path(product) %>
-          <%= link_to 'Delete', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <%= link_to 'Delete',
+                    product_path(product),
+                    data: {
+                      turbo_method: :delete,
+                      turbo_confirm: 'Are you sure?'}
+        %>
         </td>
       </tr>
     <% end %>
