--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -11,8 +11,8 @@
   </div>
 
   <div class="form-group">
-    <%= form.label :category_id %>
-    <%= form.collection_select :category_id, Cateogory.all, :id, :name, { prompt: 'Select Category' }, class: 'form-control' %>
+    <%= form.label :cateogory_id %>
+    <%= form.collection_select :cateogory_id, Cateogory.all, :id, :name, { prompt: 'Select Cateogory' }, class: 'form-control' %>
   </div>
 
 
