--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,7 +6,7 @@
     <p><strong>Inventory</strong><%= @product.inventory %></p>
 
     <% if @product.cateogory %>
-      <p><strong>Category:</strong> <%= @product.cateogory.name %></p>
+      <p><strong>Cateogory:</strong> <%= @product.cateogory.name %></p>
     <% end %>
 
   <div class="actions">
