--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Products</h1>
 <%= link_to 'Add new', new_product_path, class: 'btn btn-primary' %>
+<%= link_to 'New Sales Order', new_sales_order_path, class: 'btn btn-primary' %>
 
 <table class="table">
   <thead>
