--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -23,6 +23,10 @@
     <%= f.number_field :inventory %>
   </div>
 
+  <div >
+    <%= f.label :image %>
+    <%= f.file_field :image %>
+  </div>
 
   <div>
     <%= f.submit "Save Product" %>
