--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -20,6 +20,12 @@
     <%= form.label :inventory %>
     <%= form.number_field :inventory, min 0 %>
 
+<div class="form-group">
+  <%= form.label :image %>
+  <%= form.file_field :image %>
+</div>
+
+
   <div class="actions">
     <%= form.submit class: 'btn btn-primary' %>
   </div>
