--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,6 +9,10 @@
       <p><strong>Cateogory:</strong> <%= @product.cateogory.name %></p>
     <% end %>
 
+    <% if @product.image.attached? %>
+      <%= image_tag @product.image, width: 200 %>
+    <% end %>
+
   <div class="actions">
     <%= link_to 'Edit', edit_product_path(@product), class: 'btn btn-primary' %>
     <%= link_to 'Back to Products', products_path, class: 'btn btn-secondary' %>
